Org html: ensure that #page covers the viewport

--- a/misc/pile-css-theme/_layout.scss
+++ b/misc/pile-css-theme/_layout.scss
@@ -16,6 +16,7 @@ body {
   background-color: $back-light;
   transition-property: color, background-color;
   transition-duration: 100ms;
+  min-height: 100vh;
 }
 
 #content, header, .page-header {
